[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
# Check https://flit.readthedocs.io/en/latest/pyproject_toml.html for all available sections
name = "pyansys-tools-versioning"
version = "0.6.dev0"
dynamic = ["description"]
readme = "README.rst"
requires-python = ">=3.9,<4"
license = {file = "LICENSE"}
authors = [
    {name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"},
]
maintainers = [
    {name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
tests = [
    "hypothesis==6.103.0",
    "pytest==8.2.1",
    "pytest-cov==5.0.0",
]
doc = [
    "ansys_sphinx_theme==0.16.5",
    "numpydoc==1.7.0",
    "Sphinx==7.3.7",
    "sphinx-autoapi==3.1.1",
    "Sphinx-copybutton==0.5.2",
]

[tool.flit.module]
name = "ansys.tools.versioning"

[project.urls]
Source = "https://github.com/ansys/pyansys-tools-versioning"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 100
src_paths = ["doc", "src", "tests"]

[tool.coverage.run]
source = ["ansys.tools.versioning"]

[tool.coverage.report]
show_missing = true
